ecmascript/parser/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:2:5
  |
2 |     catch(x) { } // error missing try
  |     ^^^^^

error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:6:12
  |
6 |     try { }; // error missing finally
  |            ^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:10:5
   |
10 |     finally { } // error missing try
   |     ^^^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:11:5
   |
11 |     catch (x) { } // error missing try
   |     ^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:15:5
   |
15 |     finally { } // error missing try
   |     ^^^^^^^

error[1005]: Expected a semicolon
  --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:17:5
   |
17 |     catch (x) { } // error missing try
   |     ^^^^^

error: Unexpected token `)`. Expected yield, an identifier, [ or {
  --> $DIR/tests/typescript-errors/tsc/statements/tryStatements/invalidTryStatements/input.ts:19:20
   |
19 |     try { } catch () { } // error missing catch binding
   |                    ^

